--- a/collections.html
+++ b/collections.html
@@ -115,7 +115,7 @@ header {
 nav {
     display: flex; /* Make navigation items aligned horizontally */
     justify-content: space-between; /* Spread navigation items evenly */
-    align-items: center; /* Align items vertically */
+    align-items: right; /* Align items vertically */
     max-width: 1200px; /* Limit navigation width */
     margin: 0 auto; /* Center navigation */
 }
