--- a/movies.html
+++ b/movies.html
@@ -109,7 +109,7 @@
             max-height: 100%;
         }
 
-        /* CSS for navigation */
+     /* Navigation Styles */
 header {
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
     padding: 20px 0; /* Add padding to top and bottom */
@@ -140,6 +140,10 @@ ul li {
     margin-right: 20px; /* Add margin between list items */
 }
 
+ul li:last-child {
+    margin-right: 0; /* Remove margin from the last list item */
+}
+
 ul li a {
     color: white;
     text-decoration: none;
@@ -149,7 +153,6 @@ ul li a {
 ul li a:hover {
     color: red; /* Changing text color to red on hover */
 }
-
     </style>
 </head>
 
