Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -26,7 +26,7 @@
             text-align: center; /* Center text */
         }
 
-        /* CSS for navigation */
+     /* Navigation Styles */
 header {
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
     padding: 20px 0; /* Add padding to top and bottom */
@@ -57,6 +57,10 @@ ul li {
     margin-right: 20px; /* Add margin between list items */
 }
 
+ul li:last-child {
+    margin-right: 0; /* Remove margin from the last list item */
+}
+
 ul li a {
     color: white;
     text-decoration: none;
@@ -66,7 +70,6 @@ ul li a {
 ul li a:hover {
     color: red; /* Changing text color to red on hover */
 }
-
 
         /* Styling for game list */
         .game-list {
