--- a/froza.html
+++ b/froza.html
@@ -19,6 +19,8 @@
         header {
             position: relative;
             z-index: 2; /* Ensure header is above video */
+            padding: 20px;
+            text-align: center;
         }
 
         /* Styling for navigation bar */
