--- a/blur.html
+++ b/blur.html
@@ -123,7 +123,7 @@
 
     <div class="image-grid">
         <div class="image-item">
-            <img alt="Blur" src="bl.jpeg">
+            <img alt="Blur" src="blur.png">
             <div class="image-title">Blur</div>
         </div>
         <div class="about">
