--- a/collections.html
+++ b/collections.html
@@ -106,7 +106,7 @@
             max-width: 100%;
             max-height: 100%;
         }
-       /* CSS for navigation */
+      /* CSS from the first set for the navigation */
 header {
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
     padding: 20px 0; /* Add padding to top and bottom */
