--- a/collections.html
+++ b/collections.html
@@ -106,7 +106,7 @@
             max-width: 100%;
             max-height: 100%;
         }
-      /* CSS from the first set for the navigation */
+  /* CSS for navigation */
 header {
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
     padding: 20px 0; /* Add padding to top and bottom */
@@ -115,7 +115,7 @@ header {
 nav {
     display: flex; /* Make navigation items aligned horizontally */
     justify-content: space-between; /* Spread navigation items evenly */
-    align-items: right; /* Align items vertically */
+    align-items: center; /* Center items vertically */
     max-width: 1200px; /* Limit navigation width */
     margin: 0 auto; /* Center navigation */
 }
@@ -146,7 +146,6 @@ ul li a {
 ul li a:hover {
     color: red; /* Changing text color to red on hover */
 }
-
     </style>
 </head>
 
