--- a/blur.html
+++ b/blur.html
@@ -128,7 +128,7 @@
         </div>
         <div class="about">
             <p>Watch the Trailer</p>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/btdtkN00O70" title="Forza Horizon 5 Official Announce Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <iframe width="958" height="539" src="https://www.youtube.com/embed/6UHZLynZFjU" title="Blur - PC | PS3 | Xbox 360 - Freeze official video game trailer HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p>The Requirements</p>
             <p>CPU: Intel i5-4460 or AMD Ryzen 3 1200</p>
             <p>RAM: 8 GB, Video Card: NVidia GTX 970 OR AMD RX 470</p>
