Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -176,7 +176,7 @@ ul li a:hover {
             </figure>
 
             <figure class="game-image">
-                <a href="fifa.html"><img alt="Fifa 22" src="fifa22.jpeg" width="149" height="234"></a>
+                <a href="fifa22.html"><img alt="Fifa 22" src="fifa22.jpeg" width="149" height="234"></a>
                 <figcaption>Fifa 22</figcaption>
             </figure>
 
