Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -65,9 +65,12 @@
             color: white;
             text-decoration: none;
             transition: color 0.3s; /* Adding a smooth transition for color change */
+            padding: 10px 20px; /* Add padding to navigation links */
+            border-radius: 5px; /* Add border-radius for rounded corners */
         }
 
         ul li a:hover {
+            background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent background color on hover */
             color: red; /* Changing text color to red on hover */
         }
 
