Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -30,6 +30,8 @@
         header {
             background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
             padding: 20px 0; /* Add padding to top and bottom */
+            position: relative; /* Position relative to ensure z-index works */
+            z-index: 2; /* Ensure navigation is above the video */
         }
 
         nav {
@@ -140,7 +142,7 @@
 
 <body>
     <!-- Video Background -->
-    <video autoplay loop muted>
+    <video autoplay loop muted style="position: fixed; top: 0; left: 0; min-width: 100%; min-height: 100%;">
         <source src="background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
