--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
             <!-- Add more social media icons as needed -->
         </ul>
-        <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
+        <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
     </footer>
 </body>
 
