--- a/feedback.html
+++ b/feedback.html
@@ -2,65 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>Feedback</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-        /* CSS code for background video */
-        #bg-video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            min-width: 100%;
-            min-height: 100%;
-            z-index: -1; /* Ensure the video stays behind other content */
-            object-fit: cover; /* Cover the entire viewport */
-        }
-
-        /* Styling for form */
-        #feedback-form {
-            margin-top: 150px; /* Adjust margin to center the form */
-            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
-            padding: 20px;
-            border-radius: 10px;
-            max-width: 400px;
-            margin: 0 auto; /* Center the form horizontally */
-        }
-
-        #feedback-form label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        #feedback-form input[type="email"],
-        #feedback-form input[type="text"],
-        #feedback-form textarea {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            box-sizing: border-box; /* Ensure padding is included in width */
-        }
-
-        #feedback-form textarea {
-            height: 150px; /* Set a fixed height for the textarea */
-        }
-
-        #feedback-form input[type="submit"] {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        #feedback-form input[type="submit"]:hover {
-            background-color: #0056b3; /* Darker shade of blue on hover */
-        }
-    </style>
 </head>
 
 <body>
@@ -70,7 +14,6 @@
         <!-- Add additional source elements for other video formats -->
         Your browser does not support the video tag.
     </video>
-
     <header>
         <a href="#top">
             <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
@@ -111,9 +54,9 @@
         <p>&copy; 2024 Your Website. All rights reserved.</p>
     </footer>
 
-         <script>
+    <script>
         // JavaScript code can be added here for form submission handling or other functionality
     </script>
 </body>
 
-</html>
+</html> 
