--- a/collections.html
+++ b/collections.html
@@ -175,7 +175,7 @@ ul li a:hover {
                 </ul>
             </nav>
         </header>
-<h>Top 5 Movies<h/>
+       <div class="section-heading">Top 5 Movies</div>
         <div class="horizontal-container">
             <div class="image-item">
                 <a href="king kong.html"><img alt="KingKong" height="234" src="king%20kong.jpeg" width="149"></a>
@@ -209,7 +209,7 @@ ul li a:hover {
                 <a href="lift.html"><img alt="lift.jpeg" height="234" src="lift.jpeg" width="149"></a>
                 <div class="image-title">The Lift</div>
             </div>
-            <h>Top 5 Games and Apps</h>
+            <div class ="section-heading">Top 5 Games and Apps</div>
             <div class="image-item">
                 <a href="froza.html"><img alt="froza" height="234" src="froza.jpeg" width="149"></a>
                 <div class="image-title">Froza Horizon 5</div>
@@ -250,6 +250,7 @@ ul li a:hover {
                 <a href="john.html"><img alt="john.jpeg" height="234" src="john.jpeg" width="149"></a>
                 <div class="image-title">The John Wick Chapter 4</div>
             </div>
+            <div class="section-heading">Top Tv Shows</div>
             <div class="image-item">
                 <a href="man.html"><img alt="monkey.jpeg" height="234" src="monkey.jpeg" width="149"></a>
                 <div class="image-title">The Monkey Man</div>
