--- a/blur.html
+++ b/blur.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Games & Apps</title>
-    <link rel="stylesheet" type="text/css" href="bee.css">
+    <link rel="stylesheet" type="text/css" href="blur.css">
 </head>
 
 <body>
