--- a/king kong.html
+++ b/king kong.html
@@ -3,72 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Warner Bros Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-       nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s; /* Adding a smooth transition for color change */
-        }
-
-        nav ul li a:hover {
-            color: red; /* Changing text color to red on hover */
-        }
-
-        .image-grid {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            grid-gap: 20px;
-            padding: 20px;
-        }
-
-        .image-item img {
-            width: 100%;
-            height: auto;
-            max-width: 400px;
-            display: block;
-            margin: 0 auto;
-        }
-
-        .image-title {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 10px;
-        }
-
-        .about {
-            padding: 20px;
-        }
-
-        .about p {
-            margin-bottom: 20px;
-            line-height: 1.5;
-        }
-    </style>
+    <title>King Kong</title>
+   <link rel="stylesheet" type="text/css" href="bee.css"> 
 </head>
 
 <body>
