--- a/king kong.html
+++ b/king kong.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+     <!-- Background Video -->
+    <video id="bg-video" autoplay loop muted>
+        <source src="background.mp4" type="video/mp4">
+        <!-- Add additional source elements for other video formats -->
+        Your browser does not support the video tag.
+    </video>
     <header>
         <a href="#top">
             <img alt="Screenshot 2024-04-12 160015.png" height="90" src="Screenshot 2024-04-12 160015.png" width="100"></a>
