--- a/blur.html
+++ b/blur.html
@@ -3,31 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Warner Bros Website</title>
-    <link rel="stylesheet" type="text/css" href="blur.css">
+    <title>Games & Apps</title>
+   <link rel="stylesheet" type="text/css" href="froza.css">
 </head>
 
 <body>
     <!-- Video Background -->
-    <video autoplay loop muted id="bg-video">
+    <video autoplay loop muted>
         <source src="background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
     <!-- Content -->
-    <div class="content">
-        <!-- Logo -->
-        <header>
-            <figure>
-                <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
-            </figure>
-        </header>
-
-        <!-- Navigation -->
+    <header>
+        <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="movies.html">Movies</a></li>
+                <li><a href="Movies.html">Movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
                 <li><a href="games & apps.html">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
@@ -35,33 +28,24 @@
             </ul>
         </nav>
     </header>
+
     <div class="image-grid">
         <div class="image-item">
-            <img alt="Beekeeper" src="bee.jpeg">
-            <div class="image-title">The Beekeeper</div>
+            <img alt="Blur" src="blur.jpeg">
+            <div class="image-title">Blur</div>
         </div>
         <div class="about">
-            <p>The Beekeeper is a 2024 American action thriller film directed by David Ayer and written by Kurt Wimmer. The film stars Jason Statham, Emmy Raver-Lampman, Josh Hutcherson, Bobby Naderi, Phylicia Rashad, Jemma Redgrave and Jeremy Irons. When his good-hearted landlady commits suicide after losing her charity's funds to a phishing scam, former "Beekeeper" operative Adam Clay sets out on a brutal campaign for revenge upon those responsible.</p>
-            <p>6.4/10 (77K)</p>
-            <p>Director: David Ayer</p>
-           <p>Writer: Kurt Wimmer</p>
-           <p>Stars: Jason Statham, Emmy Raver-Lampman, Bobby Naderi</p>
-           <p>Genre: Action, Thriller</p>
-           <p>Release Date: 2024-01-12</p>
-<p>One man's brutal campaign for vengeance takes on national stakes after he is revealed to be a former operative of a powerful and clandestine organization known as "Beekeepers."</p>
-        <p>Watch The Trailer</p>
-            <iframe width="958" height="539" src="https://www.youtube.com/embed/d92ht770AQ8" title="THE BEEKEEPER Official Trailer (2024) Jason Statham, Action Movie HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>Watch the Trailer</p>
+            <iframe width="649" height="365" src="https://www.youtube.com/embed/6UHZLynZFjU" title="Blur - PC | PS3 | Xbox 360 - Freeze official video game trailer HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>The Requirements</p>
+            <p>CPU: Intel i5-4460 or AMD Ryzen 3 1200</p>
+            <p>RAM: 8 GB, Video Card: NVidia GTX 970 OR AMD RX 470</p>
+            <p>Dedicated Video RAM: 4096 MB</p>
+            <p>Pixel Shader: 5.1, Vertex Shader: 5.1</p>
+            <p>More information</p>
+            <p>Blur is a game completely focused on making racing fun again. Everything the player does, both in their cars and with their cars, is a dramatic adrenaline rush. Up to 20 cars on a track will battle each other as they trade paint, attempt hair-raising jumps, take shortcuts and collect power-ups, including the ability to boost their speed or blast other cars out of the way with huge bursts of energy. Developed by Bizarre Creations, the creators of the Project Gotham Racing series, Blur is out now for PC, PlayStation 3 and Xbox 360. www.blurthegame.com</p>
         </div>
     </div>
-<footer>
-        <ul class="social-media-icons">
-           <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-            <!-- Add more social media icons as needed -->
-        </ul>
-        <p>&copy; 2024 !Join our community today!Stay connected with us,Discover more on our socials:> Explore our latest updates:Follow us for exclusive content. Experience the world of [Warner Bros]. Your feedback matters to us! Let's create something amazing together!.</p>
-    </footer>
 </body>
+
 </html>
