--- a/blur.html
+++ b/blur.html
@@ -31,7 +31,7 @@
 
     <div class="image-grid">
         <div class="image-item">
-            <img alt="Blur" src="blur.jpng">
+            <img alt="Blur" src="blur.png">
             <div class="image-title">Blur</div>
         </div>
         <div class="about">
