--- a/TV Shows.html
+++ b/TV Shows.html
@@ -28,43 +28,44 @@
             </ul>
         </nav>
     </header>
-     <div class="horizontal-container">
-            <div class="image-item">
-                <a href="911.html"><img alt="911" height="500" src="911.jpeg" width="750"></a>
-                <div class="image-title">The 911</div>
-            </div>
-        </section>
-        <section class="image-section">
-            <div class="image-item">
-                <img alt="FBI" src="FBI.jpeg">
-                <div class="image-title">The FBI</div>
-            </div>
-        </section>
-        <section class="image-section">
-            <div class="image-item">
-                <img alt="Beacon 3" src="beac.jpeg">
-                <div class="image-title">The Beacon</div>
-            </div>
-        </section>
-        <section class="image-section">
-            <div class="image-item">
-                <img alt="Bloods" src="bloods.jpeg">
-                <div class="image-title">The Bloods</div>
-            </div>
-        </section>
-        <section class="image-section">
-            <div class="image-item">
-                <img alt="The Neighborhood" src="hood.jpeg">
-                <div class="image-title">The Neighborhood</div>
-            </div>
-        </section>
-        <section class="image-section">
-            <div class="image-item">
-                <img alt="FBI" src="FBI.jpeg">
-                <div class="image-title">The FBI</div>
-            </div>
-        </section>
-    </div>
+     <section class="horizontal-container">
+    <figure class="image-item">
+        <a href="911.html"><img alt="911" height="500" src="911.jpeg" width="750"></a>
+        <figcaption class="image-title">The 911</figcaption>
+    </figure>
+</section>
+<section class="image-section">
+    <figure class="image-item">
+        <img alt="FBI" src="FBI.jpeg">
+        <figcaption class="image-title">The FBI</figcaption>
+    </figure>
+</section>
+<section class="image-section">
+    <figure class="image-item">
+        <img alt="Beacon 3" src="beac.jpeg">
+        <figcaption class="image-title">The Beacon</figcaption>
+    </figure>
+</section>
+<section class="image-section">
+    <figure class="image-item">
+        <img alt="Bloods" src="bloods.jpeg">
+        <figcaption class="image-title">The Bloods</figcaption>
+    </figure>
+</section>
+<section class="image-section">
+    <figure class="image-item">
+        <img alt="The Neighborhood" src="hood.jpeg">
+        <figcaption class="image-title">The Neighborhood</figcaption>
+    </figure>
+</section>
+<section class="image-section">
+    <figure class="image-item">
+        <img alt="FBI" src="FBI.jpeg">
+        <figcaption class="image-title">The FBI</figcaption>
+    </figure>
+</section>
+</div>
+
 
     <!-- Footer -->
     <footer>
