--- a/TV Shows.html
+++ b/TV Shows.html
@@ -28,44 +28,32 @@
             </ul>
         </nav>
     </header>
-     <section class="horizontal-container">
-    <figure class="image-item">
-        <a href="911.html"><img alt="911" height="500" src="911.jpeg" width="750"></a>
-        <figcaption class="image-title">The 911</figcaption>
-    </figure>
-</section>
-<section class="image-section">
-    <figure class="image-item">
-        <img alt="FBI" src="FBI.jpeg">
-        <figcaption class="image-title">The FBI</figcaption>
-    </figure>
-</section>
-<section class="image-section">
-    <figure class="image-item">
-        <img alt="Beacon 3" src="beac.jpeg">
-        <figcaption class="image-title">The Beacon</figcaption>
-    </figure>
-</section>
-<section class="image-section">
-    <figure class="image-item">
-        <img alt="Bloods" src="bloods.jpeg">
-        <figcaption class="image-title">The Bloods</figcaption>
-    </figure>
-</section>
-<section class="image-section">
-    <figure class="image-item">
-        <img alt="The Neighborhood" src="hood.jpeg">
-        <figcaption class="image-title">The Neighborhood</figcaption>
-    </figure>
-</section>
-<section class="image-section">
-    <figure class="image-item">
-        <img alt="FBI" src="FBI.jpeg">
-        <figcaption class="image-title">The FBI</figcaption>
-    </figure>
-</section>
-</div>
-
+    <div class="grid-container">
+        <figure class="image-item">
+            <a href="911.html"><img alt="911" src="911.jpeg"></a>
+            <figcaption class="image-title">The 911</figcaption>
+        </figure>
+        <figure class="image-item">
+            <img alt="FBI" src="FBI.jpeg">
+            <figcaption class="image-title">The FBI</figcaption>
+        </figure>
+        <figure class="image-item">
+            <img alt="Beacon 3" src="beac.jpeg">
+            <figcaption class="image-title">The Beacon</figcaption>
+        </figure>
+        <figure class="image-item">
+            <img alt="Bloods" src="bloods.jpeg">
+            <figcaption class="image-title">The Bloods</figcaption>
+        </figure>
+        <figure class="image-item">
+            <img alt="The Neighborhood" src="hood.jpeg">
+            <figcaption class="image-title">The Neighborhood</figcaption>
+        </figure>
+        <figure class="image-item">
+            <img alt="FBI" src="FBI.jpeg">
+            <figcaption class="image-title">The FBI</figcaption>
+        </figure>
+    </div>
 
     <!-- Footer -->
     <footer>
